--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,10 @@ readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: BSD 3-Clause License",
+    "OSI Approved :: License :: BSD License",
     "Operating System :: OS Independent",
 ]
-dependencies = ["setuptools","beautifulsoup4==4.9.3","dnspython==2.6.1","ipwhois==1.2.0","requests==2.32.2","shodan==1.25.0","slackclient==2.9.3","SQLAlchemy==1.4.18","termcolor==1.1.0","tqdm==4.61.1"]
+dependencies = ["setuptools","beautifulsoup4==4.9.3","dnspython==2.6.1","ipwhois==1.2.0","requests==2.32.2","shodan==1.25.0","slackclient==2.9.3","SQLAlchemy==1.4.18","termcolor==1.1.0","tqdm==4.66.3"]
 
 
 [project.urls]
